--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 flask
 flask-socketio
-opencv-python
 numpy
-insightface
-onnxruntime
+insightface==0.7.3
+onnxruntime==1.18.1
+opencv-python-headless==4.10.0.84
+eventlet
